# untitled-gaiadr3-visualization

./: .gitignore  .gitmodules  README.md  data_analysis_script.py  setup.sh
Documentation/: benchmarks.md
download_node/: data_analysis_script.py  main.py
download_node/data/: README.md
download_node/src/: data_analysis_script.py  gaia_data_processor.py  gaia_query.py  node.py
download_node/tests/: test_download_node.py  test_gaia_dp_calculations.py  test_gaia_dp_match_names.py  test_gaia_dp_process_and_serialization.py
motion_calculation/: README.md  calc.py  compute_norm.py  config.yaml  config_14.yaml  config_19.yaml  config_7.3.yaml  config_7.4.yaml  config_7.5.yaml  config_7.6.yaml  config_template.yaml  error_analysis.py  file_logger.py  gen_data.py  inference.py  inference_interface.py  inference_rig.py  iteration_notes.md  model_test.py  node.py  orbit_mlp.py  orbit_norm.json  orbit_norm_data_12.json  orbit_study_storage.db  orbit_study_storage_beta.db  requirements.txt  train.sh
motion_calculation/configs/: config_20.yaml  config_31.1.1.yaml  config_32.1.yaml  config_32.2.yaml  config_32.yaml  config_35.yaml  config_36.1.yaml  config_36.2.yaml  config_36.3.yaml  config_36.4.yaml  config_36.5.yaml  config_36.yaml  config_37.yaml  config_optuna_0.yaml  config_optuna_1.yaml  config_template.yaml
motion_calculation/data_generation/: calc_proto_tests.py  gen_data.py
motion_calculation/nn_surrogate/: error_analysis.py  orbit_mlp.py
motion_calculation/nn_surrogate/configs/: config_40.yaml
motion_calculation/nn_surrogate/norms/: orbit_norm_data_14_20p_May12.json
protobuf_msgs/: setup.py  star_data.proto  star_data_pb2.py
visualization/: CMakeLists.txt  README.md
visualization/include/: bloom_pipeline.hpp  imgui_ui.hpp  node.hpp  shader.hpp  star_data.hpp  vis.hpp
visualization/shaders/: blur.fs  bright.fs  combine.fs  point_sprites.fs  point_sprites.vs
visualization/src/: bloom_pipeline.cpp  imgui_ui.cpp  main.cpp  node.cpp  old_vis.cpp  vis.cpp
